# GraphicalEditor

./: .gitmodules  CMakeLists.txt  README.md
shaders/: vertex.glsl
src/: canvas.cpp  canvas.h  line.cpp  line.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  shaderprogram.cpp  shaderprogram.h
